RemoteLoader auf GitHub-Download umgestellt