@@ -4,52 +4,51 @@ import net.fabricmc.api.ModInitializer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
 import java.net.URL;
 import java.net.URLClassLoader;
 
 public class RemoteLoader implements ModInitializer {
-	public static final String MOD_ID = "remoteloader";
+    public static final String MOD_ID = "remoteloader";
     public static final Logger LOGGER = LoggerFactory.getLogger(MOD_ID);
 
     private IRemoteModule loadedScript;
 
-	@Override
-	public void onInitialize() {
-		LOGGER.info("RemoteLoader startet...");
+    @Override
+    public void onInitialize() {
+        LOGGER.info("RemoteLoader sucht nach Updates auf GitHub...");
 
         try {
-            // URL zu deinem Server. 
-            // WICHTIG: Zum Testen lokal kannst du "file:///" nutzen.
-            // Beispiel Server: new URL("http://dein-server.de/remotescript-1.0.0.jar");
-            // Beispiel Lokal (Windows): 
-            URL url = new File("C:/Users/Max/Desktop/remotescript-1.0.0.jar").toURI().toURL();
+            // HIER DEN LINK ÄNDERN!
+            // Es muss der "Raw" Link zu deiner Jar-Datei sein.
+            // Beispiel: https://github.com/DeinName/DeinRepo/raw/main/remotescript-1.0.0.jar
+            // Oder via GitHub Pages / Releases.
+            
+            // Platzhalter - Du musst deinen echten Link hier einfügen:
+            String githubUrl = "https://github.com/DeinUser/DeinRepo/raw/main/remotescript-1.0.0.jar";
+            URL url = new URL(githubUrl);
 
-            // Wir erstellen einen ClassLoader, der Zugriff auf Minecraft-Klassen hat (durch 'this.getClass()...')
+            LOGGER.info("Lade Script von: " + url.toString());
+
+            // ClassLoader erstellen
             URLClassLoader child = new URLClassLoader(
                 new URL[] { url }, 
                 this.getClass().getClassLoader()
             );
 
-            // Wir laden die Klasse aus dem anderen Projekt
-            // Der Name muss EXAKT übereinstimmen mit dem in Fabricscript
+            // Klasse laden und ausführen (Rest bleibt gleich)
             Class<?> classToLoad = Class.forName("com.max.script.RemoteScript", true, child);
-
-            // Wir erstellen eine Instanz
             Object instance = classToLoad.getDeclaredConstructor().newInstance();
 
-            // Wir prüfen, ob es das Interface implementiert
             if (instance instanceof IRemoteModule) {
                 loadedScript = (IRemoteModule) instance;
                 loadedScript.onInitialize();
-                LOGGER.info("Remote-Script erfolgreich ausgeführt!");
+                LOGGER.info("Remote-Script erfolgreich von GitHub geladen!");
             } else {
-                LOGGER.error("Die geladene Klasse implementiert nicht IRemoteModule!");
+                LOGGER.error("Fehler: Interface nicht implementiert.");
             }
 
         } catch (Exception e) {
-            LOGGER.error("Fehlerbeim Laden des Remote-Scripts:", e);
-            e.printStackTrace();
+            LOGGER.error("Kritischer Fehler - Konnte Script nicht laden (Internet weg? Falscher Link?):", e);
         }
-	}
+    }
 }
